# AirGestureMouse

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
examples/: README.md
examples/prototypes/: 01_camera_test.py  02_hand_detect_test.py  03_mouse_move_test.py  04_left_click_test.py  05_full_gesture_mouse.py  06_final_gesture_mouse.py
src/air_gesture_mouse/: __init__.py  app.py  config.py  geometry.py  gestures.py  mouse.py
tests/: test_geometry.py  test_gestures.py
